--- a/src/html/03-image-figure.html
+++ b/src/html/03-image-figure.html
@@ -12,6 +12,8 @@
     </style>
   </head>
   <body>
+    <a href="./../../index.html">처음으로</a>
+
     <h1>이미지 삽입하기</h1>
     <!-- 이미지 리소스를 삽입할 때는 img 태그를 사용할 수 있으며 리소스는 src 속성으로 이미지 설명을 alt 속성으로 저장 -->
     <!-- alt로 대체 텍스트를 줘야 SEO 향상 -->
