--- a/src/html/04-anchor.html
+++ b/src/html/04-anchor.html
@@ -11,12 +11,19 @@
     <h1 id="heading">하이퍼링크 요소</h1>
     <br />
     <!-- 웹 사이트(URL)로 하이퍼링크 : 절대경로 -->
-    <a href="https://likelion.net/school">태킷 프론트엔드 스쿨(부트캠프)</a
-    ><br />
-    <!-- targey 속성의 값으로 _blank를 지정하면 새창, 새탭에 링크 결과 보기 -->
-    <a href="https://github.com/Sungwoo00" target="_blank">성우의 GitHub</a
-    ><br />
-    <a href="https://www.naver.com/" target="_blank" title="네이버로 이동합니다"
+    <a href="https://likelion.net/school">태킷 프론트엔드 스쿨(부트캠프)</a>
+    <!-- target 속성의 값으로 _blank를 지정하면 새창, 새탭에 링크 결과 보기 -->
+    <!-- target 속성의 값으로 _blank로 설정되어 있응 경우에는 rel 속성의 값으로 noopener norefferer를 지정해야 함. -->
+    <a href="https://github.com/Sungwoo00"><p>성우의 GitHub</p></a><br />
+    <p>
+      <a href="/">과제 저장소 - <a href="/">자기소개</a></a>
+    </p>
+    <a
+      href="https://www.naver.com/"
+      target="_blank"
+      title="네이버로 이동합니다"
+      target="_blank"
+      rel="noopener noreferrer"
       >네이버</a
     ><br />
 
