--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   </head>
   <body>
     <h1>HTML/CSS</h1>
-    <p>
-      <a href="./src/html/01-basic-structure.html">HTML 기본구조</a>
-      <a href="./src/html/02-heading-paragraph.html">제목과 단락</a>
-      <a href="./src/html/03-image-figure.html">이미지와 피규어</a>
-      <a href="./src/html/04-anchor.html">앵커 태그</a>
-    </p>
+    <ul>
+      <li><a href="./src/html/02-heading-paragraph.html">제목과 단락</a></li>
+      <li><a href="./src/html/03-image-figure.html">이미지와 피규어</a></li>
+      <li><a href="./src/html/01-basic-structure.html">HTML 기본구조</a></li>
+      <li><a href="./src/html/04-anchor.html">앵커 태그</a></li>
+      <li>
+        <a href="./src/html/05-unordered-list.html">비순서형, 순서형 목록</a>
+      </li>
+      <li><a href="./src/html/06-definition-list.html">정의형 목록</a></li>
+    </ul>
   </body>
 </html>
