텍스트 레벨 시맨틱 요소

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <a href="./src/html/05-unordered-list.html">비순서형, 순서형 목록</a>
       </li>
       <li><a href="./src/html/06-definition-list.html">정의형 목록</a></li>
+      <li>
+        <a href="./src/html/07-text-level-semeantic.html"
+          >텍스트 레벨 시멘틱 요쇼</a
+        >
+      </li>
     </ul>
   </body>
 </html>
