--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="./src/html/11-section-main.html">섹션과 메인 요소</a></li>
       <li><a href="/src/html/12-text-level-element.html">텍스트 레벨 요소</a></li>
       <li><a href="./src/html/13-address.html">어드레스 요소</a></li>
+      <li><a href="./src/html/14-image-element.html">picture와 source요소</a></li>
     </ul>
   </body>
 </html>
