--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>태킷 프론트엔드 스쿨 12기 - HTML/CSS</title>
   </head>
-  <body>
+  <boy>
     <h1>HTML/CSS</h1>
     <ul>
       <li><a href="./src/html/02-heading-paragraph.html">제목과 단락</a></li>
@@ -26,7 +26,8 @@
       <li><a href="/src/html/12-text-level-element.html">텍스트 레벨 요소</a></li>
       <li><a href="./src/html/13-address.html">어드레스 요소</a></li>
       <li><a href="./src/html/14-image-element.html">picture와 source요소</a></li>
-      <li><a href="./src/html/15-video-audio.html">video 및 iframe 요소</a></li>
+      <li><a href="./src/html/15-video-iframe.html">video 및 요소</a></li>
+      <li><a href="./src/html/16-frame-object.html">iframe 및 object 요소</a></li>
     </ul>
-  </body>
+  </boy>
 </html>
