--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a href="./src/html/14-image-element.html">picture와 source요소</a></li>
       <li><a href="./src/html/15-video-iframe.html">video 및 요소</a></li>
       <li><a href="./src/html/16-frame-object.html">iframe 및 object 요소</a></li>
+      <li><a href="./src/html/17-map-area.html">map과 area 요소</a></li>
     </ul>
   </boy>
 </html>
