--- a/src/html/18-form.html
+++ b/src/html/18-form.html
@@ -12,9 +12,18 @@
       <fieldset>
         <legend>input 요소를 활용한 다양한 양식 만들기</legend>
         <!-- 한 줄 글상자 (text) -->
-        <p><input type="text" /></p>
+        <p><lable>이름</lable><input type="text" name="user-name" id="user-name" required /></p>
         <!-- 검색어 입력 상자 (search) -->
-        <input type="search" name="search" id="search" />
+        <p><lable>검색어</lable><input type="search" name="search" id="search" /></p>
+        <!-- 이메일 입력 서식(email) -->
+        <p><lable>이메일</lable><input type="email" name="user-email" id="user-email" required /></p>
+        <!-- 숫자 입력 서식 (tel) -->
+        <p><lable>연락처</lable><input type="tel" name="user-phone" id="user-phone" required /></p>
+        <!-- 체크박스 서식 (checkbox) -->
+        <p><input value="HTML" type="checkbox" name="likelion-class" id="html" required /><label for="html">html</label><input value="CSS" type="checkbox" name="likelion-class" id="css" required /> <label for="css">css</label> <input value="JAVASCRIPT" type="checkbox" name="likelion-class" id="javascript" required /> <label for="javascript">javascript</label> <input value="REACT" type="checkbox" name="likelion-class" id="react" required /> <label for="react">react</label></p>
+        <!-- 라디오 서식 (radio) -->
+        <p><input value="회고 1팀" type="radio" name="techit-class" id="class-1" required /> 회고 1팀 <input value="회고 2팀" type="radio" name="techit-class" id="class-2" required /> 회고 2팀</p>
+        <button type="submit">전송</button>
       </fieldset>
     </form>
   </body>
