--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="./src/html/17-map-area.html">map과 area 요소</a></li>
       <li><a href="./src/html/18-form-input.html">form (input) 요소</a></li>
       <li><a href="./src/html/19-form-button.html">form (button)요소</a></li>
+      <li><a href="./src/html/20-form-select-textarea.html">form (slect)요소</a></li>
     </ul>
   </boy>
 </html>
