--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <li><a href="./src/html/20-form-select-textarea.html">form (slect)요소</a></li>
       <li><a href="./src/html/21-dialog.html">dialog 요소</a></li>
       <li><a href="./src/html/22-details-summary.html">details, summary 요소</a></li>
+      <li><a href="./src/html/23-script.html">script 요소</a></li>
+      <l1><a href="./src/html/24-interactive-attribute.html"> user interaction 속성</a></l1>
     </ul>
   </boy>
 </html>
