수정사항 반영 되지 않은 주석 커밋

--- a/src/html/23-script.html
+++ b/src/html/23-script.html
@@ -63,7 +63,7 @@
       }
     </style>
     <!-- defer 또는 type으로 module을 적용함 -->
-    <!-- 파싱 도중 리소스 다운을 받으면서 DOM에 띄움 그리고 script 실행 -->
+    <!-- HTML 문서가 파싱되는 동안 자바스크립트 파일을 비동기적으로 다운로드하지만, 파싱이 완료된 후에 scirpt 실행 -->
     <script src="../js/card.js" type="module"></script>
     <noscript>
       <p>Javascript를 지원하지 않은 환경에서는 서비스를 이용할 수 없습니다.</p>
