--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>태킷 프론트엔드 스쿨 12기 - HTML/CSS</title>
   </head>
-  <boy>
+  <body>
     <h1>HTML/CSS</h1>
+    <h2>HTML</h2>
     <ul>
       <li><a href="./src/html/02-heading-paragraph.html">제목과 단락</a></li>
       <li><a href="./src/html/03-image-figure.html">이미지와 피규어</a></li>
@@ -37,5 +38,9 @@
       <li><a href="./src/html/23-script.html">script 요소</a></li>
       <l1><a href="./src/html/24-interactive-attribute.html"> user interaction 속성</a></l1>
     </ul>
-  </boy>
+    <h2>CSS</h2>
+    <ul>
+      <li><a href="./src/css/01 css-basic.html">CSS 기본</a></li>
+    </ul>
+  </body>
 </html>
