--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
       <li><a href="./src/css/02-selector.html">CSS 선택자</a></li>
       <li><a href="./src/css/03-specificity.html">상속, 겹침, 우선순위</a></li>
       <li><a href="./src/css/04-reset.html">CSS 초기화</a></li>
-    </ul>
+      <l1><a href="./src/css/05-box-model.html">Box Model</a></l1>
   </body>
 </html>
