--- a/index.html
+++ b/index.html
@@ -45,5 +45,7 @@
       <li><a href="./src/css/03-specificity.html">상속, 겹침, 우선순위</a></li>
       <li><a href="./src/css/04-reset.html">CSS 초기화</a></li>
       <l1><a href="./src/css/05-box-model.html">Box Model</a></l1>
+      <li><a href="./src/css/06-float.html">float 속성</a></li>
+    </ul>
   </body>
 </html>
