--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <li><a href="./src/css/04-reset.html">CSS 초기화</a></li>
       <l1><a href="./src/css/05-box-model.html">Box Model</a></l1>
       <li><a href="./src/css/06-float.html">float 속성</a></li>
+      <li><a href="./src/ui/01-float-layout.html">float layout</a></li>
     </ul>
   </body>
 </html>
