--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       <l1><a href="./src/css/05-box-model.html">Box Model</a></l1>
       <li><a href="./src/css/06-float.html">float 속성</a></li>
       <li><a href="./src/css/07-unit.html">CSS 단위 및 색상</a></li>
-      <li><a href="./src/css/08-custom-properties.html">Custom Properties (CSS 변수)</a></li>
+      <li><a href="./src/css/08-custom-properties.html">Custom Properties (CSS 변수 )</a></li>
+      <li><a href="./src/css/09-nesting.html">CSS 중첩</a></li>
     </ul>
     <h2>UI</h2>
     <ul>
