--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <li><a href="./src/css/07-unit.html">CSS 단위 및 색상</a></li>
       <li><a href="./src/css/08-custom-properties.html">Custom Properties (CSS 변수 )</a></li>
       <li><a href="./src/css/09-nesting.html">CSS 중첩</a></li>
+      <li><a href="./src/css/10-background.html">CSS 배경</a></li>
     </ul>
     <h2>UI</h2>
     <ul>
