--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <li><a href="./src/css/08-custom-properties.html">Custom Properties (CSS 변수 )</a></li>
       <li><a href="./src/css/09-nesting.html">CSS 중첩</a></li>
       <li><a href="./src/css/10-background.html">CSS 배경</a></li>
+      <li><a href="./src/css/11-position.html">Position 속성</a></li>
     </ul>
     <h2>UI</h2>
     <ul>
