--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
       <li><a href="./src/css/10-background.html">CSS 배경</a></li>
       <li><a href="./src/css/11-position.html">Position 속성</a></li>
       <li><a href="./src/css/12-table.html">table 스타일링</a></li>
+      <li><a href="./src/css/13-scroll-behavior.html">scroll 스타일링</a></li>
     </ul>
     <h2>UI</h2>
     <ul>
       <li><a href="./src/ui/01-float-layout.html">Float Layout</a></li>
       <li><a href="./src/ui/02-float-term.html">Float Term</a></li>
+      <li><a href="./src/ui/03-table-styling.html"> Table UI 예제</a></li>
     </ul>
   </body>
 </html>
